--- a/src/styless/pages/_portfolio.scss
+++ b/src/styless/pages/_portfolio.scss
@@ -8,39 +8,57 @@ $borderRadius: 11px;
     to{left: 15vw; opacity: 1;}
 }
 
-@mixin images($animation){
-    top: 2vh;
+
+@mixin images(){
+    top: 10vh;
     height: $height;
+    opacity: 1;
+    left: 15vw;
     width: $width;
     border-radius: $borderRadius;
-    animation: $animation 0.6s ease-in forwards;
+    animation: moveImage 0.6s ease-in forwards;
     margin-bottom: 14vh;
+    &:hover{
+        animation: none;
+    }
+
+    }
+
+@keyframes moveNavUp {
+    from{top: 10vh; }
+    to{top: 0vh;}
 }
 
 #previewsNav{
-    height: 5vh;
-    
+    height: 10vh;
+    position: sticky;
+    z-index: 3;
+    background-color: black;
+    width:"110vw";
+    padding-top: "10vh"; 
+    left : "0vh";
+    animation: moveNavUp 0.4s ease-in forwards;
+    line-height: 10vh;
 }
+
 
 #previewsContent{
     .previewsImages{
-     @include images(moveImage);
+     @include images();
 
-      &:hover{
-        
-      }
+      
     }
 
     #coloroverRe{
-        @include images(moveImage);
+        @include images();
     }
 
     #coloroverMa{
-        @include images(moveImage);
+        @include images();
     }
 
     #coloroverFr{
-        @include images(moveImage);
+        @include images();
     }
 
     .previewsButton{
@@ -64,22 +82,25 @@ $borderRadius: 11px;
         top: 20vh;
         .previewsImages{
             
-            @include images(none);
+            @include images();
              width: 100vw;  
              height: 40vh;
-             
+             animation: 'none'
            }
        
            #coloroverRe{
-            @include images(none);
+            @include images();
+            animation: 'none'
            }
        
            #coloroverMa{
-            @include images(none);
+            @include images();
+            animation: 'none'
            }
        
            #coloroverFr{
-            @include images(none);
+            @include images();
+            animation: 'none'
            }
        
            
