--- a/src/styless/components/nav.css
+++ b/src/styless/components/nav.css
@@ -1,3 +1,7 @@
+:root {
+  background-color: "";
+}
+
 #daniel {
   display: none;
 }
@@ -7,8 +11,8 @@
 }
 
 #nav {
-  top: 16vh;
-  position: fixed;
+  top: 10vh;
+  position: relative;
   z-index: 5;
   background-color: var(--navColor);
   width: 89.99vw;
@@ -34,7 +38,7 @@
 }
 
 .links {
-  font-family: Roboto, Arial, system-ui;
+  font-family: Arial, system-ui;
   font-weight: bold;
   margin-left: 6vw;
   text-decoration: none;
@@ -62,7 +66,7 @@
 }
 
 #home {
-  font-family: Roboto, Arial;
+  font-family: Arial, system-ui;
   font-weight: bold;
   margin-left: 6vw;
   text-decoration: none;
@@ -80,17 +84,14 @@
 
 @media screen and (max-width: 1100px) {
   #danielpa {
-    display: block;
+    display: inline-block;
     background-color: var(--fondoColor);
-    position: fixed;
     z-index: 5;
     padding-top: 10vh;
     padding-left: 50px;
     top: -3vh;
-    top: -30px;
     left: -10px;
     width: 100vw;
-    transition: top 0.5s;
   }
   #danielpa #daniel {
     display: inline-block;
