--- a/src/styless/components/contentContainer.scss
+++ b/src/styless/components/contentContainer.scss
@@ -8,9 +8,20 @@
   width: 90vw;
   border-radius: 10px;
   top: 3.3vh;
+  
 }
 
 #content{
   position: relative;
   top: -15vh;
+  
 }
+
+@media screen and (max-width: 1100px) {
+  #content{
+    position: relative;
+    top: -0vh;
+    
+  }
+}
+
