--- a/src/styless/components/nav.scss
+++ b/src/styless/components/nav.scss
@@ -18,7 +18,6 @@
     padding-bottom: 1.7vh;
 
     p{
-      
       color:  white;
       position: relative;
       top: 0vh;
@@ -86,12 +85,16 @@
   }
   
   @media screen and (max-width: 1100px) {
+   #modeIcon{
+    display: none;
+   }
 
   #danielpa{
    display: inline-block;
-   
+   position: relative;
    background-color: var(--fondoColor);
    z-index: 5;
+   position: fixed;
    padding-top: 10vh;
    padding-left: 50px;
    top: -3vh;
