--- a/src/styless/pages/_portfolio.scss
+++ b/src/styless/pages/_portfolio.scss
@@ -86,11 +86,18 @@ $borderRadius: 11px;
     }
 }
 
+
+
 @mixin mobileImages(){
-    position: relative;
-    top: -10vh;
-    left: 0vw;
     animation: none;
+    width: 100%;
+    height: 45vh;
+    border-radius: 0px;
+    animation: buttonAnimation 0.6s ease-in forwards;
+}
+
+@mixin mobileButton(){
+   top: 30vh;
 }
 
 @media screen and (max-width: 1100px) {
@@ -117,7 +124,9 @@ $borderRadius: 11px;
             @include mobileImages()
         }
        
-           
+          .previewsButton{
+            @include mobileButton()
+          } 
 
     }
 }
