--- a/src/styless/pages/_portfolio.scss
+++ b/src/styless/pages/_portfolio.scss
@@ -4,15 +4,15 @@ $width: 68.4288vw;
 $borderRadius: 11px;
 
 @keyframes moveImage {
-    from { transform: translateX(-30%);  opacity: 0;}
+    from { transform: translateX(-20%);  opacity: 0;}
     to { transform: translateX(0); opacity: 1;}
     
     
 }
 
 @keyframes buttonAnimation{
-    from { opacity: 0;}
-    to { opacity: 1;}
+    from { opacity: 0; transform: translateY(30%);}
+    to { opacity: 1; transform: translateY(0%);}
 }
 
 
@@ -24,7 +24,7 @@ $borderRadius: 11px;
     border-radius: $borderRadius;
     margin-left: auto;
     margin-right: auto;
-    animation: moveImage 0.6s ease-in forwards;
+    animation: moveImage 0.6s ease-out forwards;
     margin-bottom: 14vh;
     &:hover{
         animation: none;
@@ -46,7 +46,7 @@ $borderRadius: 11px;
     padding-top: "10vh"; 
     font-size: 16.188px;
     left : "0vh";
-    animation: moveNavUp 0.3s ease-in forwards;
+    animation: moveNavUp 0.3s ease-out forwards;
     line-height: 10vh;
 }
 
@@ -92,13 +92,13 @@ $borderRadius: 11px;
     animation: none;
     width: 100%;
     height: 45vh;
-    border-radius: 0px;
-    animation: buttonAnimation 0.5s ease-in forwards;
+    border-radius: 6px;
+    animation: buttonAnimation 0.5s ease-out forwards;
 }
 
 @mixin mobileButton(){
    top: 30vh;
-   animation: buttonAnimation 0.5s ease-in forwards;
+   animation: buttonAnimation 0.5s ease-out forwards;
 }
 
 @media screen and (max-width: 1100px) {
