home button new hover effect

--- a/src/styless/pages/_portfolio.scss
+++ b/src/styless/pages/_portfolio.scss
@@ -83,6 +83,9 @@ $borderRadius: 11px;
         background-color: #E0E0E0;
         color: black;
         animation: buttonAnimation 0.6s ease-in forwards;
+        &:before{
+            background-color: #30b069;
+        }
     }
 }
 
