new button mouse hover animations

--- a/src/styless/pages/_portfolio.scss
+++ b/src/styless/pages/_portfolio.scss
@@ -86,6 +86,10 @@ $borderRadius: 11px;
         &:before{
             background-color: #30b069;
         }
+
+        &:hover{
+            color: #E0E0E0;
+        }
     }
 }
 
