--- a/src/styless/pages/_portfolio.scss
+++ b/src/styless/pages/_portfolio.scss
@@ -106,6 +106,11 @@ $borderRadius: 11px;
 @mixin mobileButton(){
    top: 30vh;
    animation: buttonAnimation 0.5s ease-out forwards;
+   &:hover{
+    &::before{
+        width: 100%;
+    }
+   }
 }
 
 @media screen and (max-width: 1100px) {
