--- a/src/styless/pages/home.scss
+++ b/src/styless/pages/home.scss
@@ -71,18 +71,22 @@ body{
       border-radius: 0px;
       height: 100%;
       background-color: var(--ContactButtonHoverColor);
-      transition: width 0.3s;
+      transition: width ease-out 0.3s;
       z-index: -1;
       
       }
-      
+    
+ 
     &:hover{
+      
       color: var(--ContactButtonHoverFontColor);
       
       &::before{
         
         width: 100%;
       }
+
+      
     }
   }
   
@@ -110,9 +114,14 @@ body{
   
 }
 
-
 @media screen and (max-width: 1100px) {
-  
+  button{
+    &:hover{
+      &::before{
+        width: 0%;
+      }
+    }
+  }
 }
 
 ::-moz-selection { 
