--- a/src/styless/pages/_portfolio.scss
+++ b/src/styless/pages/_portfolio.scss
@@ -78,7 +78,7 @@ $borderRadius: 11px;
         right: 0;
         margin-left: auto;
         margin-right: auto;
-        top: 54vh;
+        top: 25.4vw;
         width: 140px;
         background-color: #E0E0E0;
         color: black;
@@ -88,7 +88,7 @@ $borderRadius: 11px;
         }
 
         &:hover{
-            color: #E0E0E0;
+            color: var(--previewsButtonFontColor);
         }
     }
 }
