--- a/src/styless/pages/home.css
+++ b/src/styless/pages/home.css
@@ -69,40 +69,16 @@ Button:before {
   border-radius: 0px;
   height: 100%;
   background-color: var(--ContactButtonHoverColor);
-  transition: width 0.3s;
+  transition: width ease-out 0.3s;
   z-index: -1;
 }
 Button:hover {
-  animation: var(--fillbutton) 0.3s linear;
-  animation-fill-mode: forwards;
   color: var(--ContactButtonHoverFontColor);
 }
 Button:hover::before {
   width: 100%;
 }
 
-@keyframes fillbuttonDark {
-  0% {
-    background-color: #81E6D9;
-  }
-  99.99% {
-    background-color: #81E6D9;
-  }
-  100% {
-    background-color: black;
-  }
-}
-@keyframes fillbuttonLight {
-  0% {
-    background-color: black;
-  }
-  99.99% {
-    background-color: black;
-  }
-  100% {
-    background-color: #30b069;
-  }
-}
 body {
   background-color: var(--bodyColor);
   overflow-x: hidden;
@@ -117,6 +93,11 @@ body::-webkit-scrollbar-thumb {
   border-right: 3px solid white;
 }
 
+@media screen and (max-width: 1100px) {
+  button:hover::before {
+    width: 0%;
+  }
+}
 ::-moz-selection {
   color: black;
   background: #30b069;
