--- a/src/styless/pages/home.css
+++ b/src/styless/pages/home.css
@@ -58,6 +58,7 @@ Button {
   border-radius: 30px;
   z-index: 1;
   cursor: pointer;
+  transition: color var(--ContactButtonFontColorTransition);
 }
 Button:before {
   content: "";
