--- a/src/styless/pages/_skills.scss
+++ b/src/styless/pages/_skills.scss
@@ -154,10 +154,14 @@ screen and (min-height: 1190px){
 //mobile or tablet
 @media screen and (max-width: 1005px){
   @keyframes mobile {
-    from{opacity: 0; left: -65vw;}
-    to{opacity: 1; left: -7vw;}   
+    from{left: -60vw;}
+    to{left: -7vw;}   
   }
-
+  
+  @keyframes appear {
+    from{opacity: 0;}
+    to{opacity: 1;}   
+  }
  
   #ui{
    display: block;
@@ -166,7 +170,7 @@ screen and (min-height: 1190px){
    width: 97vw;
    top: 100px;
    height: $servicesMobileheight;
-   animation:  mobile 0.4s ease-in forwards;
+   animation:  mobile 0.4s ease-in forwards, appear 0.6s ease-in forwards;
    margin-bottom: 0;
    font-size: 25px;
     #uicon{
@@ -181,7 +185,7 @@ screen and (min-height: 1190px){
     animation: none;
     display: block;
     top: 135px;
-    animation:  mobile 0.5s ease-in forwards;
+    animation:  mobile 0.5s ease-in forwards,  appear 0.6s ease-in forwards;
     position: relative;
     left: -7vw;
     margin-top: 0vh;
@@ -199,7 +203,7 @@ screen and (min-height: 1190px){
     display: block;
     margin-top: 0vh;
     margin-right: 4vw;
-    animation:  mobile 0.6s ease-in forwards;
+    animation:  mobile 0.6s ease-in forwards,  appear 0.6s ease-in forwards;
     position: relative;
     left: -7vw;
     width: 97vw;
