--- a/src/styless/pages/_skills.scss
+++ b/src/styless/pages/_skills.scss
@@ -159,9 +159,15 @@ screen and (min-height: 1190px){
   }
   
   @keyframes appear {
-    from{opacity: 0;}
+    from{opacity: 0; }
     to{opacity: 1;}   
   }
+  
+  @keyframes appearFont {
+    from{color: transparent;}
+    to{color: (--linksColor);}   
+  }
+
  
   #ui{
    display: block;
@@ -170,13 +176,14 @@ screen and (min-height: 1190px){
    width: 97vw;
    top: 100px;
    height: $servicesMobileheight;
-   animation:  mobile 0.4s ease-in forwards, appear 0.6s ease-in forwards;
+   animation:  mobile 0.5s ease-in forwards, appear 0.6s ease-in forwards, appearFont 0.5s ease-in forwards;
    margin-bottom: 0;
    font-size: 25px;
     #uicon{
         width: 97vw;
-        animation: none;
+        animation: appearFont 0.6s ease-in forwards;
         font-size: 17px;
+        
     }
    
   }
@@ -191,10 +198,12 @@ screen and (min-height: 1190px){
     margin-top: 0vh;
     width: 97vw;
     margin-bottom: 0;
+    animation:  mobile 0.5s ease-in forwards, appear 0.6s ease-in forwards, appearFont 0.5s ease-in forwards;
     height: $servicesMobileheight;
     
     #frontcon{
         width: 97vw;
+        animation: appearFont 0.7s ease-in forwards;
     }
   }
 
