homepage minimal style change

--- a/src/styless/pages/home.scss
+++ b/src/styless/pages/home.scss
@@ -115,6 +115,13 @@ body{
 }
 
 @media screen and (max-width: 1100px) {
+  #con{
+    
+    top: 12vh;
+    
+    
+  }
+
   button{
     &:hover{
       &::before{
