--- a/src/styless/pages/home.scss
+++ b/src/styless/pages/home.scss
@@ -115,12 +115,14 @@ body{
 }
 
 @media screen and (max-width: 1100px) {
+ 
   #con{
     
     top: 12vh;
     
+    width: 80vw;
     
-  }
+}
 
   button{
     &:hover{
