contact mobile page bug fix

--- a/src/styless/pages/_contact.scss
+++ b/src/styless/pages/_contact.scss
@@ -7,6 +7,7 @@ $fontColor: dimgray;
     left: 20vw;
     font-weight: bold;
     font-size: large;
+    width: 60vw;
     font-family: $fontFamily;
 }
 
